--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,8 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "^1.6.4"
+    "angular": "^1.6.4",
+    "mocha": "^3.2.0",
+    "chai": "^3.5.0"
   }
 }
